--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,12 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <script src="https://kit.fontawesome.com/c2536b674d.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
-  <title>Convin</title>
+ <title>Convin CRUD</title>
 </head>
 
 <body>
@@ -19,6 +21,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
-  </body>
+  
+</body>
 
 </html>
