--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <script src="https://kit.fontawesome.com/c2536b674d.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/c2536b674d.js" crossorigin="anonymous"></script> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
  <title>Convin CRUD</title>
 </head>
